# OutputHooker

./: CMakeLists.txt  Global.h  OutputHooker.cpp  OutputHooker.h  OutputHooker.ini  OutputHooker.ui  README.md  main.cpp  version.rc
.github/: FUNDING.yml
core/: COMPortModule.cpp  COMPortModule.h  HidapiModule.cpp  HidapiModule.h  LedWizModule.cpp  LedWizModule.h  NetCmdModule.cpp  NetCmdModule.h  OutputHookerConfig.cpp  OutputHookerConfig.h  OutputHookerCore.cpp  OutputHookerCore.h  PacDriveModule.cpp  PacDriveModule.h  SdlCtrlModule.cpp  TCPSocketModule.cpp  TCPSocketModule.h  WinMsgModule.cpp  WinMsgModule.h
gui/: AboutWindow.cpp  AboutWindow.h  AboutWindow.ui  DeviceWindow.cpp  DeviceWindow.h  EditorAddCmdWindow.cpp  EditorAddCmdWindow.h  EditorAddCmdWindow.ui  EditorAddKeyStateWindow.cpp  EditorAddKeyStateWindow.h  EditorAddKeyStateWindow.ui  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  GuiUtilities.h  SyntaxHighlighter.h  TestOutputWindow.cpp  TestOutputWindow.h  TestOutputWindow.ui
ini/: digdug.ini
resources/: resources.qrc
resources/ini/: template.ini
